--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="#E0E0E0" />
+    <item android:drawable="@color/colorSplash" />
 
     <item>
-        <bitmap android:src="@drawable/logo"
+        <bitmap android:src="@drawable/icon"
             android:gravity="center" />
 
     </item>
