All local changes updated on rempte repository

--- a/app/src/main/res/drawable/btn_player_o_pressed.xml
+++ b/app/src/main/res/drawable/btn_player_o_pressed.xml
@@ -1,5 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="3dp"
-        android:color="#2D9CDB" />
+        android:color="#2D9CDB"
+        />
+
 </shape>
