--- a/app/src/main/res/drawable/btn_player_x_pressed.xml
+++ b/app/src/main/res/drawable/btn_player_x_pressed.xml
@@ -1,2 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:width="3dp"
+        android:color="#EB5757" />
+</shape>
