--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -5,6 +5,10 @@
     <item>
         <bitmap android:src="@drawable/icon"
             android:gravity="center" />
+    </item>
 
+    <item>
+        <bitmap android:src="@drawable/logo"
+            android:gravity="bottom"/>
     </item>
 </layer-list>
