--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.daimokenya.tic_tac_toe.MainActivity">
+    tools:context="com.daimokenya.tic_tac_toe.MainActivity"
+    android:background="@drawable/app_background"
+    android:orientation="vertical">
+
+    <ImageView
+        android:src="@drawable/logo"
+        android:layout_width="match_parent"
+        android:layout_height="66dp" />
 
     <TextView
+        android:layout_marginTop="110dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="casual"
+        android:text="Please choose a player below:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:typeface="normal"/>
+    <LinearLayout
+        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:gravity="center_horizontal">
+        <Button
+            android:id="@+id/btn_player_x"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:text="X"
+            android:textSize="50sp"
+            android:textColor="#EB5757"
+            android:alpha="1.00"/>
+        <Button
+            android:id="@+id/btn_player_o"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:text="O"
+            android:textSize="50sp"
+            android:textColor="#2D9CDB"
+            android:alpha="1.00"
+            />
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+
+
+        <Button
+            android:id="@+id/btn_play"
+            android:layout_marginTop="80dp"
+            android:layout_width="160dp"
+            android:layout_height="50dp"
+            android:text="Play"
+            android:textStyle="bold"
+            android:fontFamily="casual"
+            android:textSize="20sp"
+            android:layout_gravity="center_horizontal"
+            android:onClick="play"/>
+
+
+</LinearLayout>
