--- a/app/src/main/res/layout/activity_play_board.xml
+++ b/app/src/main/res/layout/activity_play_board.xml
@@ -11,79 +11,7 @@
         android:orientation="horizontal"
         android:gravity="fill_horizontal"
         android:paddingTop="16dp">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="8dp"
-            android:gravity="start">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="16dp"
-                android:text="Wins"
-                android:textStyle="bold"
-                android:fontFamily="casual"/>
-            <TextView
-                android:id="@+id/txt_wins"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="28dp"
-                android:text="0"
-                android:fontFamily="casual"/>
 
-        </LinearLayout>
-        <Space
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="16dp"
-                android:text="Draws"
-                android:textStyle="bold"
-                android:fontFamily="casual"/>
-            <TextView
-                android:id="@+id/txt_draws"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="28dp"
-                android:text="0"
-                android:fontFamily="casual"/>
-
-        </LinearLayout>
-        <Space
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="end">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="Lost"
-                android:textStyle="bold"
-                android:fontFamily="casual"/>
-            <TextView
-                android:id="@+id/txt_lose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="28dp"
-                android:text="0"
-                android:fontFamily="casual"/>
-
-        </LinearLayout>
 
     </LinearLayout>
 
@@ -118,6 +46,21 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:onClick="playFiveBoxBoard"
+            />
+        <Space
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
+        <TextView
+            android:id="@+id/txt_reset_board"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:text="Reset Board"
+            android:fontFamily="casual"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:onClick="resetBoard"
             />
     </LinearLayout>
 
