--- a/app/src/main/res/layout/score_board_pop.xml
+++ b/app/src/main/res/layout/score_board_pop.xml
@@ -1,6 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/grid_view_border"
+    android:padding="26dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingStart="8dp"
+        android:gravity="start">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:text="Wins"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:fontFamily="casual"/>
+        <TextView
+            android:id="@+id/txt_wins"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="28dp"
+            android:textSize="30sp"
+            android:text="0"
+            android:fontFamily="casual"/>
 
-</android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+    <Space
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:text="Draws"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:fontFamily="casual"/>
+        <TextView
+            android:id="@+id/txt_draws"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="28dp"
+            android:textSize="30sp"
+            android:text="0"
+            android:fontFamily="casual"/>
+
+    </LinearLayout>
+    <Space
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="end">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="Lost"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:fontFamily="casual"/>
+        <TextView
+            android:id="@+id/txt_lose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="28dp"
+            android:text="0"
+            android:textSize="30sp"
+            android:fontFamily="casual"/>
+
+    </LinearLayout>
+
+</LinearLayout>
