Set the onclick for reset Board to respective function

--- a/app/src/main/res/layout/activity_play_board.xml
+++ b/app/src/main/res/layout/activity_play_board.xml
@@ -60,8 +60,7 @@
             android:fontFamily="casual"
             android:textStyle="bold"
             android:textSize="20sp"
-            android:onClick="resetBoard"
-            />
+            android:onClick="resetBoard"/>
     </LinearLayout>
 
 </LinearLayout>
